deploy: 5ff28b71c533b585ff4b9c74fb2cb763f0332181

--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@ https://github.com/matthieugouel">
 <meta property="og:image:height" content="1024">
 </head>
 <body class=blue>
-<div class="container headings--one-size">
+<div class="container full headings--one-size">
 <header class=header>
 <div class=header__inner>
 <div class=header__logo>
