--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@ https://github.com/matthieugouel">
 <link rel=stylesheet href=/assets/style.css>
 <link rel=stylesheet href=/assets/blue.css>
 <link rel=apple-touch-icon href=/img/apple-touch-icon-192x192.png>
-<link rel="shortcut icon" href=/img/favicon/blue.png>
+<link rel="shortcut icon" href=/favicon.ico>
 <meta name=twitter:card content="summary">
 <meta name=twitter:site content="matthieugouel">
 <meta name=twitter:creator content>
@@ -22,7 +22,7 @@ https://github.com/matthieugouel">
 https://github.com/matthieugouel">
 <meta property="og:url" content="/about/">
 <meta property="og:site_name" content="Random Logs">
-<meta property="og:image" content="/img/favicon/blue.png">
+<meta property="og:image" content="/favicon.ico">
 <meta property="og:image:width" content="2048">
 <meta property="og:image:height" content="1024">
 </head>
