--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
 <meta property="og:image:height" content="1024">
 </head>
 <body class=blue>
-<div class="container full headings--one-size">
+<div class="container center headings--one-size">
 <header class=header>
 <div class=header__inner>
 <div class=header__logo>
