--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,8 @@
 <title> :: Random Logs</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=description content="Hello! My name is Matthieu Gouel. I&amp;rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.
-https://github.com/matthieugouel">
+<meta name=description content="Hello! 👋 My name is Matthieu Gouel. I&amp;rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.
+GitHub: https://github.com/matthieugouel">
 <meta name=keywords content>
 <meta name=robots content="noodp">
 <link rel=canonical href=/about/>
@@ -18,8 +18,8 @@ https://github.com/matthieugouel">
 <meta property="og:locale" content="en">
 <meta property="og:type" content="article">
 <meta property="og:title" content>
-<meta property="og:description" content="Hello! My name is Matthieu Gouel. I&amp;rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.
-https://github.com/matthieugouel">
+<meta property="og:description" content="Hello! 👋 My name is Matthieu Gouel. I&amp;rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.
+GitHub: https://github.com/matthieugouel">
 <meta property="og:url" content="/about/">
 <meta property="og:site_name" content="Random Logs">
 <meta property="og:image" content="/favicon.ico">
@@ -55,8 +55,8 @@ Random Logs
 <div class=post-meta>
 </div>
 <div class=post-content><div>
-<p>Hello! My name is Matthieu Gouel. I&rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.</p>
-<p><a href=https://github.com/matthieugouel>https://github.com/matthieugouel</a></p>
+<p>Hello! 👋 My name is Matthieu Gouel. I&rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.</p>
+<p>GitHub: <a href=https://github.com/matthieugouel>https://github.com/matthieugouel</a></p>
 </div></div>
 </div>
 </div>
