deploy: 0ea03a6572201c24ea0d399dc28f76e921f83c4e

--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,8 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=description content="Hello! 👋 My name is Matthieu Gouel. I&amp;rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.
-GitHub: https://github.com/matthieugouel">
+I currently work in the NPA team of the LIP6 laboratory at Sorbonne Université, and I’m affiliated with the LINCS laboratory. I’m part of the Dioptra group led by Timur Friedman and Olivier Fourmaux.
+Before, I worked for the French Ministry of Defense as a Software Engineer and for the Société Générale as a DevOps Engineer.">
 <meta name=keywords content>
 <meta name=robots content="noodp">
 <link rel=canonical href=/about/>
@@ -19,7 +20,8 @@ GitHub: https://github.com/matthieugouel">
 <meta property="og:type" content="article">
 <meta property="og:title" content>
 <meta property="og:description" content="Hello! 👋 My name is Matthieu Gouel. I&amp;rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.
-GitHub: https://github.com/matthieugouel">
+I currently work in the NPA team of the LIP6 laboratory at Sorbonne Université, and I’m affiliated with the LINCS laboratory. I’m part of the Dioptra group led by Timur Friedman and Olivier Fourmaux.
+Before, I worked for the French Ministry of Defense as a Software Engineer and for the Société Générale as a DevOps Engineer.">
 <meta property="og:url" content="/about/">
 <meta property="og:site_name" content="Random Logs">
 <meta property="og:image" content="/favicon.ico">
@@ -42,9 +44,11 @@ Random Logs
 <nav class=menu>
 <ul class="menu__inner menu__inner--desktop">
 <li><a href=/about>About</a></li>
+<li><a href=/posts>Posts</a></li>
 </ul>
 <ul class="menu__inner menu__inner--mobile">
 <li><a href=/about>About</a></li>
+<li><a href=/posts>Posts</a></li>
 </ul>
 </nav>
 </header>
@@ -56,14 +60,38 @@ Random Logs
 </div>
 <div class=post-content><div>
 <p>Hello! 👋 My name is Matthieu Gouel. I&rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.</p>
-<p>GitHub: <a href=https://github.com/matthieugouel>https://github.com/matthieugouel</a></p>
+<p>I currently work in the <a href="https://www.lip6.fr/recherche/team.php?acronyme=NPA">NPA</a> team of the <a href=https://www.lip6.fr>LIP6</a> laboratory at <a href=https://www.sorbonne-universite.fr>Sorbonne Université</a>, and I’m affiliated with the <a href=https://www.lincs.fr>LINCS</a> laboratory. I’m part of the <a href=https://dioptra.io/about>Dioptra</a> group led by <a href=https://orcid.org/0000-0002-1653-3552>Timur Friedman</a> and <a href=https://orcid.org/0000-0002-6885-9378>Olivier Fourmaux</a>.</p>
+<p>Before, I worked for the <a href=https://www.defense.gouv.fr>French Ministry of Defense</a> as a Software Engineer and for the <a href=https://particuliers.societegenerale.fr>Société Générale</a> as a DevOps Engineer.</p>
+<p>Check out my <a href=https://github.com/matthieugouel>GitHub</a> and <a href=https://www.linkedin.com/in/matthieugouel>LinkedIn</a> profiles.</p>
+<h2 id=publications>Publications<a href=#publications class=hanchor arialabel=Anchor>&#8983;</a> </h2>
+<p><a href="https://scholar.google.fr/citations?user=Ltb5srIAAAAJ&hl=fr&oi=sra">Scholar</a> | <a href=https://orcid.org/0000-0003-0579-7023>ORCID</a> | <a href="https://hal.archives-ouvertes.fr/search/index/?q=%2A&authIdHal_s=matthieu-gouel&sort=producedDate_tdate+desc">HAL</a></p>
+<ul>
+<li><a href=/posts/tma2021/>IP Geolocation Database Stability and Implications for Network Research</a><br>
+Matthieu Gouel, Kevin Vermeulen, Olivier Fourmaux, Timur Friedman, Robert Beverly<br>
+<a href=https://tma.ifip.org>TMA2021</a></li>
+</ul>
+<h2 id=talks>Talks<a href=#talks class=hanchor arialabel=Anchor>&#8983;</a> </h2>
+<ul>
+<li>
+<p><a href="https://www.youtube.com/watch?v=ygmoJz1A8Ig">Developing With Style: The Pythonic Way</a><br>
+LINCS Python Workshop - English</p>
+</li>
+<li>
+<p><a href="https://www.youtube.com/watch?v=tbEpqWaK75U&t=2s">Classification of Load-Balancing on the Internet</a><br>
+LINCS Internet Measurement Reading Group - French</p>
+</li>
+<li>
+<p><a href="https://www.youtube.com/watch?v=ZdIgTk3vMOQ">Takeaways of building a research-oriented system</a><br>
+LINCS Python Workshop - French</p>
+</li>
+</ul>
 </div></div>
 </div>
 </div>
 <footer class=footer>
 <div class=footer__inner>
 <div class="copyright copyright--user">
-<span>Copyright © 2021 Matthieu Gouel</span>
+<span>Creative Commons BY-SA 4.0 License</span>
 <span>:: Theme made by <a href=https://twitter.com/panr>panr</a></span>
 </div>
 </div>
