deploy: 3aa699d586feaf9b30c554d01c8a9a9f66d4614c

--- a/about/index.html
+++ b/about/index.html
@@ -67,11 +67,15 @@ Random Logs
 <p><a href="https://scholar.google.fr/citations?user=Ltb5srIAAAAJ&hl=fr&oi=sra">Scholar</a> | <a href=https://orcid.org/0000-0003-0579-7023>ORCID</a> | <a href="https://hal.archives-ouvertes.fr/search/index/?q=%2A&authIdHal_s=matthieu-gouel&sort=producedDate_tdate+desc">HAL</a></p>
 <ul>
 <li><a href=/posts/tma2021/>IP Geolocation Database Stability and Implications for Network Research</a><br>
-Matthieu Gouel, Kevin Vermeulen, Olivier Fourmaux, Timur Friedman, Robert Beverly<br>
+<strong>Matthieu Gouel</strong>, Kevin Vermeulen, Olivier Fourmaux, Timur Friedman, Robert Beverly<br>
 <a href=https://tma.ifip.org>TMA2021</a></li>
 </ul>
 <h2 id=talks>Talks<a href=#talks class=hanchor arialabel=Anchor>&#8983;</a> </h2>
 <ul>
+<li>
+<p><a href="https://www.youtube.com/watch?v=lTyAHubVF-I">MPLS in Internet Topologies</a><br>
+LINCS Internet Measurement Reading Group - French</p>
+</li>
 <li>
 <p><a href="https://www.youtube.com/watch?v=ygmoJz1A8Ig">Developing With Style: The Pythonic Way</a><br>
 LINCS Python Workshop - English</p>
