deploy: 1b797014b16b9e6d94d006bb4556bf3ee8f84984

--- a/about/index.html
+++ b/about/index.html
@@ -1,76 +1,62 @@
-<!doctype html><html lang=en>
+<!doctype html><html lang=en-us>
 <head>
-<title> :: Random Logs</title>
-<meta charset=utf-8>
-<meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=description content="Hello! 👋 My name is Matthieu Gouel. I&amp;rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.
-I currently work in the NPA team of the LIP6 laboratory at Sorbonne Université, and I’m affiliated with the LINCS laboratory. I’m part of the Dioptra group led by Timur Friedman and Olivier Fourmaux.
-Before, I worked for the French Ministry of Defense as a Software Engineer and for the Société Générale as a DevOps Engineer.">
-<meta name=keywords content>
-<meta name=robots content="noodp">
-<link rel=canonical href=/about/>
-<link rel=stylesheet href=/assets/style.css>
-<link rel=stylesheet href=/assets/blue.css>
-<link rel=apple-touch-icon href=/img/apple-touch-icon-192x192.png>
+<title> // Matthieu Gouel</title>
 <link rel="shortcut icon" href=/favicon.ico>
+<meta charset=utf-8>
+<meta name=generator content="Hugo 0.91.2">
+<meta name=viewport content="width=device-width,initial-scale=1">
+<meta name=author content="Matthieu Gouel">
+<meta name=description content>
+<link rel=stylesheet href=https://randomlogs.com/css/main.min.88e7083eff65effb7485b6e6f38d10afbec25093a6fac42d734ce9024d3defbd.css>
 <meta name=twitter:card content="summary">
-<meta name=twitter:site content="matthieugouel">
-<meta name=twitter:creator content>
-<meta property="og:locale" content="en">
-<meta property="og:type" content="article">
-<meta property="og:title" content>
-<meta property="og:description" content="Hello! 👋 My name is Matthieu Gouel. I&amp;rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.
+<meta name=twitter:title content>
+<meta name=twitter:description content="Hello! 👋 My name is Matthieu Gouel. I&rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.
 I currently work in the NPA team of the LIP6 laboratory at Sorbonne Université, and I’m affiliated with the LINCS laboratory. I’m part of the Dioptra group led by Timur Friedman and Olivier Fourmaux.
-Before, I worked for the French Ministry of Defense as a Software Engineer and for the Société Générale as a DevOps Engineer.">
-<meta property="og:url" content="/about/">
-<meta property="og:site_name" content="Random Logs">
-<meta property="og:image" content="/favicon.ico">
-<meta property="og:image:width" content="2048">
-<meta property="og:image:height" content="1024">
+Before, I worked for the French Ministry of Armed Forces as a Software Engineer and for the Société Générale as a DevOps Engineer.">
+<meta property="og:title" content>
+<meta property="og:description" content="Hello! 👋 My name is Matthieu Gouel. I&rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.
+I currently work in the NPA team of the LIP6 laboratory at Sorbonne Université, and I’m affiliated with the LINCS laboratory. I’m part of the Dioptra group led by Timur Friedman and Olivier Fourmaux.
+Before, I worked for the French Ministry of Armed Forces as a Software Engineer and for the Société Générale as a DevOps Engineer.">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://randomlogs.com/about/"><meta property="article:section" content>
 </head>
-<body class=blue>
-<div class="container center headings--one-size">
-<header class=header>
-<div class=header__inner>
-<div class=header__logo>
-<a href=/>
-<div class=logo>
-Random Logs
-</div>
+<body>
+<header class=app-header>
+<a href=https://randomlogs.com><img class=app-header-avatar src=/avatar.jpg alt="Matthieu Gouel"></a>
+<h1>Matthieu Gouel</h1>
+<nav class=app-header-menu>
+<a class=app-header-menu-item href=/>Home</a>
+-
+<a class=app-header-menu-item href=/tags/>Tags</a>
+-
+<a class=app-header-menu-item href=/about/>About</a>
+</nav>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+<div class=app-header-social>
+<a href=https://github.com/matthieugouel target=_blank rel="noreferrer noopener"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-github"><title>Github</title><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg>
+</a>
+<a href=https://twitter.com/matthieugouel target=_blank rel="noreferrer noopener"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-link"><path d="M10 13a5 5 0 007.54.54l3-3a5 5 0 00-7.07-7.07l-1.72 1.71"/><path d="M14 11a5 5 0 00-7.54-.54l-3 3a5 5 0 007.07 7.07l1.71-1.71"/></svg>
 </a>
 </div>
-<div class=menu-trigger>menu</div>
-</div>
-<nav class=menu>
-<ul class="menu__inner menu__inner--desktop">
-<li><a href=/about>About</a></li>
-<li><a href=/posts>Posts</a></li>
-</ul>
-<ul class="menu__inner menu__inner--mobile">
-<li><a href=/about>About</a></li>
-<li><a href=/posts>Posts</a></li>
-</ul>
-</nav>
 </header>
-<div class=content>
-<div class=post>
-<h1 class=post-title>
-<a href=/about/></a></h1>
-<div class=post-meta>
-</div>
-<div class=post-content><div>
+<main class=app-container>
+<article class=post>
+<header class=post-header>
+<h1 class=post-title></h1>
+</header>
+<div class=post-content>
 <p>Hello! 👋 My name is Matthieu Gouel. I&rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.</p>
 <p>I currently work in the <a href="https://www.lip6.fr/recherche/team.php?acronyme=NPA">NPA</a> team of the <a href=https://www.lip6.fr>LIP6</a> laboratory at <a href=https://www.sorbonne-universite.fr>Sorbonne Université</a>, and I’m affiliated with the <a href=https://www.lincs.fr>LINCS</a> laboratory. I’m part of the <a href=https://dioptra.io/about>Dioptra</a> group led by <a href=https://orcid.org/0000-0002-1653-3552>Timur Friedman</a> and <a href=https://orcid.org/0000-0002-6885-9378>Olivier Fourmaux</a>.</p>
-<p>Before, I worked for the <a href=https://www.defense.gouv.fr>French Ministry of Defense</a> as a Software Engineer and for the <a href=https://particuliers.societegenerale.fr>Société Générale</a> as a DevOps Engineer.</p>
+<p>Before, I worked for the <a href=https://www.defense.gouv.fr>French Ministry of Armed Forces</a> as a Software Engineer and for the <a href=https://particuliers.societegenerale.fr>Société Générale</a> as a DevOps Engineer.</p>
 <p>Check out my <a href=https://github.com/matthieugouel>GitHub</a> and <a href=https://www.linkedin.com/in/matthieugouel>LinkedIn</a> profiles.</p>
-<h2 id=publications>Publications<a href=#publications class=hanchor arialabel=Anchor>&#8983;</a> </h2>
+<h2 id=publications>Publications</h2>
 <p><a href="https://scholar.google.fr/citations?user=Ltb5srIAAAAJ&hl=fr&oi=sra">Scholar</a> | <a href=https://orcid.org/0000-0003-0579-7023>ORCID</a> | <a href="https://hal.archives-ouvertes.fr/search/index/?q=%2A&authIdHal_s=matthieu-gouel&sort=producedDate_tdate+desc">HAL</a></p>
 <ul>
-<li><a href=/posts/tma2021/>IP Geolocation Database Stability and Implications for Network Research</a><br>
+<li><a href=https://randomlogs.com/posts/tma2021/>IP Geolocation Database Stability and Implications for Network Research</a><br>
 <strong>Matthieu Gouel</strong>, Kevin Vermeulen, Olivier Fourmaux, Timur Friedman, Robert Beverly<br>
 <a href=https://tma.ifip.org>TMA2021</a></li>
 </ul>
-<h2 id=talks>Talks<a href=#talks class=hanchor arialabel=Anchor>&#8983;</a> </h2>
+<h2 id=talks>Talks</h2>
 <ul>
 <li>
 <p><a href="https://www.youtube.com/watch?v=lTyAHubVF-I">MPLS in Internet Topologies</a><br>
@@ -89,19 +75,10 @@ LINCS Internet Measurement Reading Group - French</p>
 LINCS Python Workshop - French</p>
 </li>
 </ul>
-</div></div>
 </div>
+<div class=post-footer>
 </div>
-<footer class=footer>
-<div class=footer__inner>
-<div class="copyright copyright--user">
-<span>Creative Commons BY-SA 4.0 License</span>
-<span>:: Theme made by <a href=https://twitter.com/panr>panr</a></span>
-</div>
-</div>
-</footer>
-<script src=/assets/main.js></script>
-<script src=/assets/prism.js></script>
-</div>
+</article>
+</main>
 </body>
 </html>
