--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang=en-us>
 <head>
-<title> // Matthieu Gouel</title>
+<title>About // Matthieu Gouel</title>
 <link rel="shortcut icon" href=/favicon.ico>
 <meta charset=utf-8>
 <meta name=generator content="Hugo 0.91.2">
@@ -9,11 +9,11 @@
 <meta name=description content>
 <link rel=stylesheet href=https://randomlogs.com/css/main.min.88e7083eff65effb7485b6e6f38d10afbec25093a6fac42d734ce9024d3defbd.css>
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content>
+<meta name=twitter:title content="About">
 <meta name=twitter:description content="Hello! 👋 My name is Matthieu Gouel. I&rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.
 I currently work in the NPA team of the LIP6 laboratory at Sorbonne Université, and I’m affiliated with the LINCS laboratory. I’m part of the Dioptra group led by Timur Friedman and Olivier Fourmaux.
 Before, I worked for the French Ministry of Armed Forces as a Software Engineer and for the Société Générale as a DevOps Engineer.">
-<meta property="og:title" content>
+<meta property="og:title" content="About">
 <meta property="og:description" content="Hello! 👋 My name is Matthieu Gouel. I&rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.
 I currently work in the NPA team of the LIP6 laboratory at Sorbonne Université, and I’m affiliated with the LINCS laboratory. I’m part of the Dioptra group led by Timur Friedman and Olivier Fourmaux.
 Before, I worked for the French Ministry of Armed Forces as a Software Engineer and for the Société Générale as a DevOps Engineer.">
@@ -42,7 +42,7 @@ Before, I worked for the French Ministry of Armed Forces as a Software Engineer 
 <main class=app-container>
 <article class=post>
 <header class=post-header>
-<h1 class=post-title></h1>
+<h1 class=post-title>About</h1>
 </header>
 <div class=post-content>
 <p>Hello! 👋 My name is Matthieu Gouel. I&rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.</p>
