deploy: 7922e275b82302e536fd632133e56d338ee9598e

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <meta property="og:description" content="PhD Student in Computer Science and Software Engineer">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://randomlogs.com/">
+<script defer data-domain=randomlogs.com src=https://ple2.planet-lab.eu/js/plausible.js></script>
 </head>
 <body>
 <header class=app-header>
