--- a/about/index.html
+++ b/about/index.html
@@ -19,6 +19,7 @@ I currently work in the NPA team of the LIP6 laboratory at Sorbonne Université,
 Before, I worked for the French Ministry of Armed Forces as a Software Engineer and for the Société Générale as a DevOps Engineer.">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://randomlogs.com/about/"><meta property="article:section" content>
+<script defer data-domain=randomlogs.com src=https://ple2.planet-lab.eu/js/plausible.js></script>
 </head>
 <body>
 <header class=app-header>
