--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@ Before, I worked for the French Ministry of Armed Forces as a Software Engineer 
 </head>
 <body>
 <header class=app-header>
-<a href=https://randomlogs.com><img class=app-header-avatar src=/avatar.jpg alt="Matthieu Gouel"></a>
+<a href=https://randomlogs.com><img class=app-header-avatar src=/avatar.png alt="Matthieu Gouel"></a>
 <h1>Matthieu Gouel</h1>
 <nav class=app-header-menu>
 <a class=app-header-menu-item href=/>Home</a>
