--- a/about/index.html
+++ b/about/index.html
@@ -50,7 +50,7 @@ Before, I worked for the French Ministry of Armed Forces as a Software Engineer 
 <p>I currently work in the <a href="https://www.lip6.fr/recherche/team.php?acronyme=NPA">NPA</a> team of the <a href=https://www.lip6.fr>LIP6</a> laboratory at <a href=https://www.sorbonne-universite.fr>Sorbonne Université</a>, and I’m affiliated with the <a href=https://www.lincs.fr>LINCS</a> laboratory. I’m part of the <a href=https://dioptra.io/about>Dioptra</a> group led by <a href=https://orcid.org/0000-0002-1653-3552>Timur Friedman</a> and <a href=https://orcid.org/0000-0002-6885-9378>Olivier Fourmaux</a>.</p>
 <p>Before, I worked for the <a href=https://www.defense.gouv.fr>French Ministry of Armed Forces</a> as a Software Engineer and for the <a href=https://particuliers.societegenerale.fr>Société Générale</a> as a DevOps Engineer.</p>
 <p>Check out my <a href=https://github.com/matthieugouel>GitHub</a> and <a href=https://twitter.com/matthieugouel>Twitter</a>.</p>
-<p><a href=/pdf/resume.pdf><strong>Resume</strong></a></p>
+<p>📚 <a href=/pdf/resume.pdf><strong>Resume</strong></a></p>
 <h2 id=publications>Publications</h2>
 <p><a href="https://scholar.google.fr/citations?user=Ltb5srIAAAAJ&hl=fr&oi=sra">Scholar</a> | <a href=https://orcid.org/0000-0003-0579-7023>ORCID</a> | <a href="https://hal.archives-ouvertes.fr/search/index/?q=%2A&authIdHal_s=matthieu-gouel&sort=producedDate_tdate+desc">HAL</a></p>
 <ul>
