--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <title>About // Matthieu Gouel</title>
 <link rel="shortcut icon" href=/favicon.ico>
 <meta charset=utf-8>
-<meta name=generator content="Hugo 0.91.2">
+<meta name=generator content="Hugo 0.92.2">
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=author content="Matthieu Gouel">
 <meta name=description content>
@@ -36,8 +36,6 @@ Before, I worked for the French Ministry of Armed Forces as a Software Engineer 
 <div class=app-header-social>
 <a href=https://github.com/matthieugouel target=_blank rel="noreferrer noopener"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-github"><title>Github</title><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg>
 </a>
-<a href=https://twitter.com/matthieugouel target=_blank rel="noreferrer noopener"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-link"><path d="M10 13a5 5 0 007.54.54l3-3a5 5 0 00-7.07-7.07l-1.72 1.71"/><path d="M14 11a5 5 0 00-7.54-.54l-3 3a5 5 0 007.07 7.07l1.71-1.71"/></svg>
-</a>
 </div>
 </header>
 <main class=app-container>
@@ -49,8 +47,7 @@ Before, I worked for the French Ministry of Armed Forces as a Software Engineer 
 <p>Hello! 👋 My name is Matthieu Gouel. I&rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.</p>
 <p>I currently work in the <a href="https://www.lip6.fr/recherche/team.php?acronyme=NPA">NPA</a> team of the <a href=https://www.lip6.fr>LIP6</a> laboratory at <a href=https://www.sorbonne-universite.fr>Sorbonne Université</a>, and I’m affiliated with the <a href=https://www.lincs.fr>LINCS</a> laboratory. I’m part of the <a href=https://dioptra.io/about>Dioptra</a> group led by <a href=https://orcid.org/0000-0002-1653-3552>Timur Friedman</a> and <a href=https://orcid.org/0000-0002-6885-9378>Olivier Fourmaux</a>.</p>
 <p>Before, I worked for the <a href=https://www.defense.gouv.fr>French Ministry of Armed Forces</a> as a Software Engineer and for the <a href=https://particuliers.societegenerale.fr>Société Générale</a> as a DevOps Engineer.</p>
-<p>Check out my <a href=https://github.com/matthieugouel>GitHub</a> and <a href=https://twitter.com/matthieugouel>Twitter</a>.</p>
-<p>📚 <a href=/pdf/resume.pdf><strong>Resume</strong></a></p>
+<p>✨ <a href=https://github.com/matthieugouel><strong>GitHub</strong></a> 📚 <a href=/pdf/resume.pdf><strong>Resume</strong></a></p>
 <h2 id=publications>Publications</h2>
 <p><a href="https://scholar.google.fr/citations?user=Ltb5srIAAAAJ&hl=fr&oi=sra">Scholar</a> | <a href=https://orcid.org/0000-0003-0579-7023>ORCID</a> | <a href="https://hal.archives-ouvertes.fr/search/index/?q=%2A&authIdHal_s=matthieu-gouel&sort=producedDate_tdate+desc">HAL</a></p>
 <ul>
