--- a/about/index.html
+++ b/about/index.html
@@ -1,9 +1,8 @@
 <!doctype html><html lang=en-us>
 <head>
-<title>About // Matthieu Gouel</title>
-<link rel="shortcut icon" href=/favicon.ico>
+<title>About // Matthieu Gouel</title><link rel="shortcut icon" href=/favicon.ico>
 <meta charset=utf-8>
-<meta name=generator content="Hugo 0.92.2">
+<meta name=generator content="Hugo 0.93.1">
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=author content="Matthieu Gouel">
 <meta name=description content>
@@ -20,77 +19,43 @@ Before, I worked for the French Ministry of Armed Forces as a Software Engineer 
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://randomlogs.com/about/"><meta property="article:section" content>
 <script defer data-domain=randomlogs.com src=https://ple2.planet-lab.eu/js/plausible.js></script>
-</head>
-<body>
+</head><body>
 <header class=app-header>
 <a href=https://randomlogs.com><img class=app-header-avatar src=/avatar.png alt="Matthieu Gouel"></a>
-<h1>Matthieu Gouel</h1>
-<nav class=app-header-menu>
+<h1>Matthieu Gouel</h1><nav class=app-header-menu>
 <a class=app-header-menu-item href=/>Home</a>
 -
-<a class=app-header-menu-item href=/tags/>Tags</a>
--
 <a class=app-header-menu-item href=/about/>About</a>
-</nav>
-<p>PhD Student in Computer Science and Software Engineer</p>
-<div class=app-header-social>
+-
+<a class=app-header-menu-item href=/tags/>Tags</a>
+</nav><p>PhD Student in Computer Science and Software Engineer</p><div class=app-header-social>
+<a href=mailto:matthieu.gouel@lip6.fr target=_blank rel="noreferrer noopener"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-mail"><title>Mail</title><path d="M4 4h16c1.1.0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1.0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
+</a>
 <a href=https://github.com/matthieugouel target=_blank rel="noreferrer noopener"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-github"><title>Github</title><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg>
 </a>
-<a href="https://scholar.google.fr/citations?user=Ltb5srIAAAAJ&hl=fr&oi=ao" target=_blank rel="noreferrer noopener"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-link"><path d="M10 13a5 5 0 007.54.54l3-3a5 5 0 00-7.07-7.07l-1.72 1.71"/><path d="M14 11a5 5 0 00-7.54-.54l-3 3a5 5 0 007.07 7.07l1.71-1.71"/></svg>
+<a href="https://scholar.google.fr/citations?user=Ltb5srIAAAAJ&hl=fr&oi=ao" target=_blank rel="noreferrer noopener"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-book"><title>Scholar</title><path d="M4 19.5A2.5 2.5.0 016.5 17H20"/><path d="M6.5 2H20v20H6.5A2.5 2.5.0 014 19.5v-15A2.5 2.5.0 016.5 2z"/></svg>
 </a>
-</div>
-</header>
-<main class=app-container>
+</div></header><main class=app-container>
 <article class=post>
 <header class=post-header>
-<h1 class=post-title>About</h1>
-</header>
-<div class=post-content>
-<p>Hello! 👋 My name is Matthieu Gouel. I&rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.</p>
-<p>I currently work in the <a href="https://www.lip6.fr/recherche/team.php?acronyme=NPA">NPA</a> team of the <a href=https://www.lip6.fr>LIP6</a> laboratory at <a href=https://www.sorbonne-universite.fr>Sorbonne Université</a>, and I’m affiliated with the <a href=https://www.lincs.fr>LINCS</a> laboratory. I’m part of the <a href=https://dioptra.io/about>Dioptra</a> group led by <a href=https://orcid.org/0000-0002-1653-3552>Timur Friedman</a> and <a href=https://orcid.org/0000-0002-6885-9378>Olivier Fourmaux</a>.</p>
-<p>Before, I worked for the <a href=https://www.defense.gouv.fr>French Ministry of Armed Forces</a> as a Software Engineer and for the <a href=https://particuliers.societegenerale.fr>Société Générale</a> as a DevOps Engineer.</p>
-<p>✨ <a href=https://github.com/matthieugouel><strong>GitHub</strong></a> 📚 <a href=/pdf/resume.pdf><strong>Resume</strong></a></p>
-<h2 id=publications>Publications</h2>
-<p><a href="https://scholar.google.fr/citations?user=Ltb5srIAAAAJ&hl=fr&oi=sra">Scholar</a> | <a href=https://orcid.org/0000-0003-0579-7023>ORCID</a> | <a href="https://hal.archives-ouvertes.fr/search/index/?q=%2A&authIdHal_s=matthieu-gouel&sort=producedDate_tdate+desc">HAL</a></p>
-<ul>
+<h1 class=post-title>About</h1></header><div class=post-content>
+<p>Hello! 👋 My name is Matthieu Gouel. I&rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.</p><p>I currently work in the <a href="https://www.lip6.fr/recherche/team.php?acronyme=NPA">NPA</a> team of the <a href=https://www.lip6.fr>LIP6</a> laboratory at <a href=https://www.sorbonne-universite.fr>Sorbonne Université</a>, and I’m affiliated with the <a href=https://www.lincs.fr>LINCS</a> laboratory. I’m part of the <a href=https://dioptra.io/about>Dioptra</a> group led by <a href=https://orcid.org/0000-0002-1653-3552>Timur Friedman</a> and <a href=https://orcid.org/0000-0002-6885-9378>Olivier Fourmaux</a>.</p><p>Before, I worked for the <a href=https://www.defense.gouv.fr>French Ministry of Armed Forces</a> as a Software Engineer and for the <a href=https://particuliers.societegenerale.fr>Société Générale</a> as a DevOps Engineer.</p><p>✨ <a href=https://github.com/matthieugouel><strong>GitHub</strong></a> 📚 <a href=/pdf/resume.pdf><strong>Resume</strong></a></p><h2 id=publications>Publications</h2><p><a href="https://scholar.google.fr/citations?user=Ltb5srIAAAAJ&hl=fr&oi=sra">Scholar</a> | <a href=https://orcid.org/0000-0003-0579-7023>ORCID</a> | <a href="https://hal.archives-ouvertes.fr/search/index/?q=%2A&authIdHal_s=matthieu-gouel&sort=producedDate_tdate+desc">HAL</a></p><ul>
 <li>
 <p><a href=https://randomlogs.com/posts/20210914tma/>IP Geolocation Database Stability and Implications for Network Research</a><br>
 <strong>Matthieu Gouel</strong>, Kevin Vermeulen, Olivier Fourmaux, Timur Friedman, Robert Beverly<br>
-<a href=https://tma.ifip.org>TMA 2021</a></p>
-</li>
-<li>
+<a href=https://tma.ifip.org>TMA 2021</a></p></li><li>
 <p><a href=https://randomlogs.com/posts/20200201pam/>Alias Resolution Based on ICMP Rate Limiting</a><br>
 Kevin Vermeulen, Burim Ljuma, Vamsi Addanki, <strong>Matthieu Gouel</strong>, Olivier Fourmaux, Timur Friedman, Reza Rejaie<br>
-<a href=https://pam2020.cs.uoregon.edu>PAM 2020</a></p>
-</li>
-</ul>
-<h2 id=talks>Talks</h2>
-<ul>
+<a href=https://pam2020.cs.uoregon.edu>PAM 2020</a></p></li></ul><h2 id=lincs-talks>LINCS Talks</h2><ul>
 <li>
 <p><a href="https://www.youtube.com/watch?v=xw_3erIudaM&t=2s">Object-Oriented Programming in Python</a><br>
-LINCS Python Workshop - French</p>
-</li>
-<li>
+Python Workshop - French</p></li><li>
 <p><a href="https://www.youtube.com/watch?v=lTyAHubVF-I">MPLS in Internet Topologies</a><br>
-LINCS Internet Measurement Reading Group - French</p>
-</li>
-<li>
+Internet Measurement Reading Group - French</p></li><li>
 <p><a href="https://www.youtube.com/watch?v=ygmoJz1A8Ig">Developing With Style: The Pythonic Way</a><br>
-LINCS Python Workshop - English</p>
-</li>
-<li>
+Python Workshop - English</p></li><li>
 <p><a href="https://www.youtube.com/watch?v=tbEpqWaK75U&t=2s">Classification of Load-Balancing on the Internet</a><br>
-LINCS Internet Measurement Reading Group - French</p>
-</li>
-<li>
+Internet Measurement Reading Group - French</p></li><li>
 <p><a href="https://www.youtube.com/watch?v=ZdIgTk3vMOQ">Takeaways of building a research-oriented system</a><br>
-LINCS Python Workshop - French</p>
-</li>
-</ul>
-</div>
-<div class=post-footer>
-</div>
-</article>
-</main>
-</body>
-</html>
+Python Workshop - French</p></li></ul></div><div class=post-footer>
+</div></article></main></body></html>
