deploy: 69dc3a154b30c1862c5570d47da49c17604620ef

--- a/about/index.html
+++ b/about/index.html
@@ -41,9 +41,12 @@ Before, I worked for the French Ministry of Armed Forces as a Software Engineer 
 <h1 class=post-title>About</h1></header><div class=post-content>
 <p>Hello! 👋 My name is Matthieu Gouel. I&rsquo;m a Ph.D student in computer science and a Software Engineer based in Paris, France.</p><p>I currently work in the <a href="https://www.lip6.fr/recherche/team.php?acronyme=NPA">NPA</a> team of the <a href=https://www.lip6.fr>LIP6</a> laboratory at <a href=https://www.sorbonne-universite.fr>Sorbonne Université</a>, and I’m affiliated with the <a href=https://www.lincs.fr>LINCS</a> laboratory. I’m part of the <a href=https://dioptra.io/about>Dioptra</a> group led by <a href=https://orcid.org/0000-0002-1653-3552>Timur Friedman</a> and <a href=https://orcid.org/0000-0002-6885-9378>Olivier Fourmaux</a>.</p><p>Before, I worked for the <a href=https://www.defense.gouv.fr>French Ministry of Armed Forces</a> as a Software Engineer and for the <a href=https://particuliers.societegenerale.fr>Société Générale</a> as a DevOps Engineer.</p><p>✨ <a href=https://github.com/matthieugouel><strong>GitHub</strong></a> 📚 <a href=/pdf/resume.pdf><strong>Resume</strong></a></p><h2 id=publications>Publications</h2><p><a href="https://scholar.google.fr/citations?user=Ltb5srIAAAAJ&hl=fr&oi=sra">Scholar</a> | <a href=https://orcid.org/0000-0003-0579-7023>ORCID</a> | <a href="https://hal.archives-ouvertes.fr/search/index/?q=%2A&authIdHal_s=matthieu-gouel&sort=producedDate_tdate+desc">HAL</a></p><ul>
 <li>
+<p><a href=https://randomlogs.com/posts/20220301ccr/>Zeph & Iris map the internet: A resilient reinforcement learning approach to distributed IP route tracing</a><br>
+<strong>Matthieu Gouel</strong>, Kevin Vermeulen, Maxime Mouchet, Justin P. Rohrer, Olivier Fourmaux, Timur Friedman<br>
+<a href=https://ccronline.sigcomm.org>SIGCOMM CCR 2022</a></p></li><li>
 <p><a href=https://randomlogs.com/posts/20210914tma/>IP Geolocation Database Stability and Implications for Network Research</a><br>
 <strong>Matthieu Gouel</strong>, Kevin Vermeulen, Olivier Fourmaux, Timur Friedman, Robert Beverly<br>
-<a href=https://tma.ifip.org>TMA 2021</a></p></li><li>
+<a href=https://tma.ifip.org>IFIP TMA 2021</a></p></li><li>
 <p><a href=https://randomlogs.com/posts/20200201pam/>Alias Resolution Based on ICMP Rate Limiting</a><br>
 Kevin Vermeulen, Burim Ljuma, Vamsi Addanki, <strong>Matthieu Gouel</strong>, Olivier Fourmaux, Timur Friedman, Reza Rejaie<br>
 <a href=https://pam2020.cs.uoregon.edu>PAM 2020</a></p></li></ul><h2 id=lincs-talks>LINCS Talks</h2><ul>
