deploy: 7e3517a1b6fb31047f9d36a240b7fc1d604385cc

--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@ Before, I worked for the French Ministry of Armed Forces as a Software Engineer 
 <li>
 <p><a href=https://randomlogs.com/posts/20220301ccr/>Zeph & Iris map the internet: A resilient reinforcement learning approach to distributed IP route tracing</a><br>
 <strong>Matthieu Gouel</strong>, Kevin Vermeulen, Maxime Mouchet, Justin P. Rohrer, Olivier Fourmaux, Timur Friedman<br>
-<a href=https://ccronline.sigcomm.org>SIGCOMM CCR 2022</a></p></li><li>
+<a href=https://ccronline.sigcomm.org>ACM SIGCOMM CCR 2022</a></p></li><li>
 <p><a href=https://randomlogs.com/posts/20210914tma/>IP Geolocation Database Stability and Implications for Network Research</a><br>
 <strong>Matthieu Gouel</strong>, Kevin Vermeulen, Olivier Fourmaux, Timur Friedman, Robert Beverly<br>
 <a href=https://tma.ifip.org>IFIP TMA 2021</a></p></li><li>
